# codex-fewer-permission-prompts

./: .gitattributes  .gitignore  README.md  SKILL.md  pyproject.toml
.codex/: INSTALL.md  UNINSTALL.md  UPDATE.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
scripts/: check_metadata.py  codex_fewer_permission_prompts.py
skills/codex-fewer-permission-prompts/: SKILL.md
skills/codex-fewer-permission-prompts/scripts/: codex_fewer_permission_prompts.py
src/codex_fewer_permission_prompts/: __init__.py  __main__.py  cli.py
tests/: test_codex_fewer_permission_prompts.py
