[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-fewer-permission-prompts"
version = "0.1.0"
description = "Safely propose, verify, apply, and rollback Codex prefix_rule entries for repeated low-risk commands."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "gaoguobin" }
]
keywords = [
  "codex",
  "openai-codex",
  "agent-skill",
  "agent-skills",
  "codex-skill",
  "codex-plugin",
  "skillsmp",
  "permissions",
  "permission-prompts",
  "fewer-permission-prompts",
  "rules",
  "prefix-rule",
  "execpolicy",
  "developer-tools"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/gaoguobin/codex-fewer-permission-prompts"
Repository = "https://github.com/gaoguobin/codex-fewer-permission-prompts"
Issues = "https://github.com/gaoguobin/codex-fewer-permission-prompts/issues"
Documentation = "https://github.com/gaoguobin/codex-fewer-permission-prompts#readme"

[project.scripts]
codex-fewer-permission-prompts = "codex_fewer_permission_prompts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
